fix: fingerprint registration

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,8 +18,9 @@
   </div>
 
   <div id="step2" style="display:none; margin-top: 20px;">
-    <h3>Подтвердите отпечаток пальца</h3>
-    <button onclick="authenticateFingerprint()">Подтвердить отпечаток</button>
+    <h3>Отпечаток пальца</h3>
+    <button onclick="registerFingerprint()">🔐 Зарегистрировать отпечаток</button>
+    <button onclick="authenticateFingerprint()">✅ Подтвердить отпечаток</button>
   </div>
 
   <script src="script.js"></script>
